]Refactoring] Change global.css

--- a/src/apps/web/pomodoro_client/css/global.css
+++ b/src/apps/web/pomodoro_client/css/global.css
@@ -296,8 +296,8 @@ ul.plan_tasks__list_lst {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
-    opacity: 0.6;
+    font-size: 1rem;
+    opacity: 0.75;
 }
 
 /* линия посередине по вертикали */
