--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTask.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTask.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 0.5rem;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0.5rem 0;
+  padding: 0.5rem 0.5rem 0.5rem 0;
   cursor: pointer;
 
   // Плавный hover
