[Feature] Task control was realized
- Разработан класс управления состоянием задачи ActiveTaskControl
- Доработан appContext
- Существенно переработан компонент Timer
- Доработаны зависимые классы и стили
- Рефакторинг, исправление ошибок

--- a/src/apps/web/pomodoro_client/src/css/default_theme.css
+++ b/src/apps/web/pomodoro_client/src/css/default_theme.css
@@ -1,6 +1,7 @@
 :root {
     --background_color: #ffffff;
     --main-color: #d04643;
+    --break-color: #00A131;
     --timer_font_color: #ffffff;
     --border-color: #000000;
 }
