--- a/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
@@ -5,11 +5,19 @@
   justify-content: center;
   width: 100%;
   height: 200px;
-  background: var(--main-color);
+
   border-radius: 0.5rem;
   margin-top: 1.5rem;
   gap: 0.5rem;
   font-weight: lighter;
+}
+
+.timer__task {
+  background: var(--main-color);
+}
+
+.timer__break {
+  background: var(--break-color);
 }
 
 .timer__navigation {
@@ -46,4 +54,14 @@
   opacity: 0.8;
   border: 1px solid var(--timer_font_color);
   padding: 0.25rem;
+
+  &.disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+
+    &:hover {
+      background-color: transparent;
+      transform: none;                   // отключаем scale
+    }
+  }
 }
