--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTasksStatistics.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTasksStatistics.module.scss
@@ -1,6 +1,7 @@
 .plan_tasks__statistics {
   display: flex;
   flex-direction: column;
+  margin-top: 0.5rem;
 }
 
 .plan_tasks__statistics_title {
@@ -39,6 +40,7 @@
 .plan_tasks__statistics_categories {
   display: flex;
   opacity: 0.7;
+  margin-top: 0.5rem;
 }
 
 .plan_tasks__statistics_categories_list {
