--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTask.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTask.module.scss
@@ -16,6 +16,31 @@
   &:active {
     cursor: grabbing;
   }
+
+  &_mobile {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0.5rem 0.5rem 0.5rem 0;
+    gap: 0.5rem;
+  }
+}
+
+.plan_task__task {
+  display: flex;
+  gap: 0.5rem;
+  width: 100%;
+  align-items: flex-start;
+}
+
+.plan_task__toolbar {
+  display: flex;
+  align-self: center;
+  gap: 1rem;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 0.2rem;
+  padding: 0.5rem;
 }
 
 .plan_task__dragging {
@@ -31,12 +56,23 @@
   width: 120px;
   opacity: 0.7;
   padding: 0 0.5rem;
+
+  &_mobile {
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.2rem;
+  }
 }
 
 .plan_task__description {
   flex: 1;
   opacity: 0.7;
   padding: 0 0.5rem;
+
+  &_mobile {
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.2rem;
+    text-wrap: wrap;
+  }
 }
 
 .plan_task_input {
