--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTasks.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTasks.module.scss
@@ -2,4 +2,9 @@
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
+
+  &_mobile {
+    margin-inline: auto;
+    width: calc(100vw - 1rem);
+  }
 }
