--- a/src/apps/web/pomodoro_client/src/components/Footer/Footer.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/Footer/Footer.module.scss
@@ -2,3 +2,7 @@
   padding: 0.5rem;
   border-top: 1px solid var(--main-color);
 }
+
+.footer__label {
+  // Текст подвала (название приложения и т.п.)
+}
