--- a/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTasksStatistics.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTasksStatistics.module.scss
@@ -3,6 +3,22 @@
   flex-direction: column;
 }
 
+.archive_tasks__statistics_summary {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 0 0.5rem;
+  font-size: 0.75rem;
+  opacity: 0.75;
+  padding-bottom: 0.5rem;
+}
+
+.archive_tasks__statistics_summary_value {
+  font-weight: 500;
+}
+
 .archive_tasks__statistics_categories {
   display: flex;
   opacity: 0.7;
