--- a/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTasksStatistics.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTasksStatistics.module.scss
@@ -22,7 +22,7 @@
 .archive_tasks__statistics_categories {
   display: flex;
   opacity: 0.7;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid var(--border-subtle, rgba(0, 0, 0, 0.1));
   padding: 0.5rem 0;
 }
 
