--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTasksCommon.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTasksCommon.module.scss
@@ -1,4 +1,5 @@
 .plan_task__button {
   background-color: transparent;
   border: 1px solid var(--main-color);
+  color: var(--text-primary, inherit);
 }
