--- a/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
@@ -61,6 +61,7 @@
 .timer__countdown {
   color: var(--timer_font_color);
   font-size: 5rem;
+  font-family: "Montserrat", sans-serif;
   line-height: 0.75;
 }
 
