--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTask.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTask.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   gap: 0.5rem;
   border-top: 1px solid var(--border-subtle, rgba(0, 0, 0, 0.1));
-  padding: 0.5rem 0.5rem 0.5rem 0;
+  padding: 0.85rem 0.85rem 0.85rem 0;
   cursor: grab;
 
   // Плавный hover
@@ -27,7 +27,7 @@
     align-items: flex-end;
     flex-direction: column;
     border-top: 1px solid var(--border-subtle, rgba(0, 0, 0, 0.1));
-    padding: 0.5rem 0.5rem 0.5rem 0;
+    padding: 0.85rem 0.85rem 0.85rem 0;
     gap: 0.5rem;
 
     :global(html.theme-dark) &:hover {
@@ -79,6 +79,7 @@
   width: 120px;
   opacity: 0.7;
   padding: 0 0.5rem;
+  line-height: 1.5;
 
   &_mobile {
     border: 2px solid var(--border-subtle, rgba(0, 0, 0, 0.1));
@@ -90,6 +91,7 @@
   flex: 1;
   opacity: 0.7;
   padding: 0 0.5rem;
+  line-height: 1.5;
 
   &_mobile {
     border: 2px solid var(--border-subtle, rgba(0, 0, 0, 0.1));
