--- a/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTaskList.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/PlanTasks/PlanTaskList.module.scss
@@ -7,6 +7,7 @@
 .plan_task_item {
   position: relative;
   transition: opacity 1s ease-out, background-color 1s ease-out;
+  margin-bottom: 0.25rem;
 }
 
 .plan_task_item__completing {
