--- a/src/apps/web/pomodoro_client/src/css/default_theme.css
+++ b/src/apps/web/pomodoro_client/src/css/default_theme.css
@@ -8,4 +8,5 @@
     --divider-line-color: #000000;
     --divider-line-height: 1px;
     --border-subtle: rgba(0, 0, 0, 0.1);
+    --target-achieved-color: #0d7a2d;
 }
