--- a/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTasks.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTasks.module.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
 
   &_mobile {
-    width: calc(100vw - 1rem);
-    margin-inline: auto;
+    width: 100%;
+    max-width: 100%;
   }
 }
