--- a/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
@@ -13,9 +13,8 @@
 
   &_mobile {
     overflow: hidden;
-    width: calc(100vw - 1rem);
+    width: 100%;
     height: 230px;
-    margin-inline: auto;
   }
 }
 
