--- a/src/apps/web/pomodoro_client/src/components/global.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/global.module.scss
@@ -1,6 +1,7 @@
 .container {
   max-width: 950px;
   margin-inline: auto;
+  padding-inline: 0.75rem;
 }
 
 /* чуть больше воздуха на крупных экранах */
