--- a/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTask.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/ArchiveTasks/ArchiveTask.module.scss
@@ -41,12 +41,23 @@
     :global(html.theme-dark) &:hover {
       background-color: rgba(255, 255, 255, 0.1);
     }
+
+    .archive_task__actions {
+      align-self: flex-end;
+    }
   }
+}
+
+.archive_task__actions {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  margin-left: auto;
 }
 
 .archive_task__menu_wrap {
   position: relative;
-  margin-left: auto;
 }
 
 .archive_task__menu_button {
@@ -63,15 +74,6 @@
   gap: 0.5rem;
   width: 100%;
   align-items: flex-start;
-}
-
-.archive_task__time {
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
-  width: 100%;
-  align-items: center;
-    justify-content: flex-end;
 }
 
 .archive_task__refresh_button {
