--- a/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
+++ b/src/apps/web/pomodoro_client/src/components/Timer/Timer.module.scss
@@ -12,9 +12,8 @@
   font-weight: lighter;
 
   &_mobile {
-    overflow: hidden;
-    width: 100%;
-    height: 230px;
+    height: auto;
+    padding: 1rem 0;
   }
 }
 
@@ -69,6 +68,14 @@
   opacity: 0.8;
   font-size: 1rem;
   margin-inline: auto;
+
+  &_mobile {
+    text-wrap: wrap;
+    word-break: break-word;
+    text-align: center;
+    padding: 0 0.5rem;
+    margin-inline: auto;
+  }
 }
 
 .timer__buttons {
